<resources>
    <string name="app_name">React</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create_account">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="phone_number">(555) – 555 – 5555</string>
    <string name="select_one">Select one</string>
    <string name="select_picture">Select or take picture</string>
    <string name="home_title">Home</string>
    <string name="react_title">React</string>
    <string name="contacts_title">Contacts</string>
    <string name="database_title">Database</string>
    <string name="about_title">About</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="bio_hint">Enter your bio here</string>
    <string name="log_out">Log out</string>
    <string name="match">Match!</string>
    <string name="default_name">John Doe</string>
    <string name="waiting">Waiting...</string>
</resources>